fix group spacing

--- a/common/group/group.scss
+++ b/common/group/group.scss
@@ -35,6 +35,7 @@
     .lf-group-content {
       padding-left: var(--lf-group-padding);
       padding-right: var(--lf-group-padding);
+      padding-bottom: var(--lf-group-padding);
     }
   }
 
